test/files/neg/warn-shadowing-import-213/Test1.scala
// scalac: -Xsource:2.13 -Werror

package b
import a._

class C {
  def t = O.b
}
